[package]
name = "cosmic-applet-workspaces"
version = "0.1.1"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
libcosmic.workspace = true
cctk.workspace = true
cosmic-protocols.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
once_cell = "1.19"
futures.workspace = true
anyhow.workspace = true
tokio = "1.36"
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
rust-embed.workspace = true
