[package]
name = "libcosmic-applet"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmic-panel-config = { git = "https://github.com/pop-os/cosmic-panel/", features = ["gtk4"] }
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs", features = ["v4_6"] }
once_cell = "1.12.0"
relm4-macros = { git = "https://github.com/Relm4/Relm4.git", branch = "next" }
