[package]
name = "pop-cosmic-panel"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
cascade = "1"
chrono = "0.4"
byte_string = "1"
derivative = "2"
enumflags2 = "0.7"
futures = "0.3"
futures-channel = "0.3"
gdk4-x11 = { version = "0.4.2", features = ["xlib"] }
gdk4-wayland = { version = "0.4", optional = true }
gtk4 = "0.4"
gobject-sys = "0.15"
libcosmic = { git = "https://github.com/pop-os/libcosmic" }
once_cell = "1"
serde = "1"
toml = "0.5"
x11 = { version = "2", features = ["xlib"] }
zbus = "2"
zbus_names = "2"
zvariant = "3"

[features]
layer-shell = ["gdk4-wayland", "libcosmic/layer-shell"]
