[package]
name = "cosmic-applet-audio"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
futures = "0.3.21"
futures-util = "0.3.21"
libcosmic-widgets = { git = "https://github.com/pop-os/libcosmic" }
libpulse-binding = "2.26.0"
libpulse-glib-binding = "2.25.0"
tracker = "0.1.1"
freedesktop-desktop-entry = "0.5.0"
mpris2-zbus = { git = "https://github.com/pop-os/mpris2-zbus" }
zbus = "2.1.1"
tokio = { version = "1.17.0", features = ["full"] }
relm4-macros = "0.4.4"
once_cell = "1.10.0"
gtk4 = { version = "0.4.7", features = ["v4_2"] }
async-io = "1.6.0"

[features]
