[package]
name = "cosmic-applet-battery"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs" }
adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita"}
libcosmic-applet = { path = "../../libcosmic-applet" }
relm4 = { git = "https://github.com/relm4/relm4", branch = "next", features = ["macros"] }
zbus = { version = "2", no-default-features = true }
