[package]
name = "cosmic-applet-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4 = { version = "0.4.6", features = ["v4_2"] }
once_cell = "1.9.0"
relm4-macros = "0.4.2"
tokio = { version = "1.16.1", features = ["full"] }
zbus = "2.1.1"
