[package]
name = "cosmic-applet-network"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
cosmic-dbus-networkmanager = { git = "https://github.com/pop-os/dbus-settings-bindings" }
futures-util = "0.3.19"
gtk4 = "0.4.6"
itertools = "0.10.3"
once_cell = "1.9.0"
relm4-macros = "0.4.1"
slotmap = "1.0.6"
tokio = { version = "1.15.0", features = ["full"] }
zbus = "2.0.1"
