[package]
name = "cosmic-applet-notifications"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
cascade = "1"
futures = "0.3"
gtk4 = { git = "https://github.com/gtk-rs/gtk4-rs" }
once_cell = "1.12"
serde = "1"
zbus = "2.0.1"
zbus_names = "2"
zvariant = "3"
cosmic-panel-config = {git = "https://github.com/pop-os/cosmic-panel", branch = "gtk-rs-git_nobuild", features = ["gtk4"]}
