[package]
name = "cosmic-applet-power"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
icon-loader = { version = "0.3.6", features = ["gtk"] }
libpulse-binding = "2.26.0"
libpulse-glib-binding = "2.25.0"
libcosmic = { git = "https://github.com/pop-os/libcosmic/", branch = "master", default-features = false, features = ["wayland", "applet"] }
nix = "0.24.1"

# Until the 3.6.3 release, need the implementation of clone on zbus::Error
[dependencies.zbus]
git = "https://gitlab.freedesktop.org/dbus/zbus"
branch = "main"

# Until zbus 3.6.3 is released
[dependencies.logind-zbus]
git = "https://github.com/pop-os/logind-zbus"
branch = "main"
